examples/typechecking/effects.an
ability Log =
    log: fn String -> Unit

ability Use a =
    get: fn Unit -> a
    set: fn a -> Unit

// Expect handler typed with Use String, not Log
handle_basic () {Log} {Use String} =
    handler h for log v -> set v in
    log "test1" {h}

use_resume () =
    handler h for
      | get () -> resume 3i32
      | set _ -> resume ()
    in ()

does_use x {Use I32} =
    y = get ()
    set (y + x)

// Ensure a function with unhandled effects errors
pure_fn () =
    log "foo"

// main should always handle all non-primitive effects
main () =
    log "foo"

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// type Log =
//     log: fn String [Ptr Unit] -> Unit
// 
// type Use a =
//     get: fn Unit [Ptr Unit] -> a
//     set: fn a [Ptr Unit] -> Unit
// 
// (handle_basic: fn Unit {Log} {Use String} -> Unit) () {(_: Log)} {(_: Use String)} =
//     handler (h: Log) for
//     | (log: fn String {Log} [Ptr Unit] -> Unit) (v: String) -> fn (v: String) (resume: fn Unit [Ptr] -> Unit) [(_: Use String)] -> (set: fn String {Use String} [Ptr Unit] -> Unit) (v: String) {(_: Use String)}
//     in fn () -> (log: fn String {Log} [Ptr Unit] -> Unit) "test1" {(h: Log)}
// 
// (use_resume: fn Unit -> Unit) () =
//     handler (h: Use I32) for
//     | (get: fn Unit {Use I32} [Ptr Unit] -> I32) () -> fn () (resume: fn I32 [Ptr] -> Unit) -> (resume: fn I32 [Ptr] -> Unit) 3_I32
//     | (set: fn I32 {Use I32} [Ptr Unit] -> Unit) (_: I32) -> fn (_: I32) (resume: fn Unit [Ptr] -> Unit) -> (resume: fn Unit [Ptr] -> Unit) ()
//     in fn () -> ()
// 
// (does_use: fn I32 {Use I32} -> Unit) (x: I32) {(_: Use I32)} =
//     (y: I32) = (get: fn Unit {Use I32} [Ptr Unit] -> I32) () {(_: Use I32)}
//     (set: fn I32 {Use I32} [Ptr Unit] -> Unit) ((+: fn I32 I32 {Add I32} [Ptr Unit] -> I32) (y: I32) (x: I32) {(add_i32: Add I32)}) {(_: Use I32)}
// 
// (pure_fn: fn Unit -> Unit) () =
//     (log: fn String {Log} [Ptr Unit] -> Unit) "foo" {(error)}
// 
// (main: fn Unit -> Unit) () =
//     (log: fn String {Log} [Ptr Unit] -> Unit) "foo" {(error)}

// expected stderr:
// examples/typechecking/effects.an:25:5
// 24 | pure_fn () =
// 25 |     log "foo"	// error: No implicit found for type Log required by log
//    |     ^^^
// 
// examples/typechecking/effects.an:29:5
// 28 | main () =
// 29 |     log "foo"	// error: No implicit found for type Log required by log
//    |     ^^^
// 
// Found 2 errors and 0 warnings

